@@ -25,6 +25,9 @@
 
 #include <features.h>
 
+/* For compilers without complex math support, just ignore this file.  */
+#ifndef __UNIXLIB_NO_COMPLEX
+
 /* Get general and ISO C99 specific information.  */
 #include <bits/mathdef.h>
 
@@ -103,5 +106,7 @@ __BEGIN_DECLS
 #undef	__MATHCALL
 
 __END_DECLS
+
+#endif /* ! __UNIXLIB_NO_COMPLEX */
 
 #endif /* complex.h */
